@@ -114,15 +114,16 @@ lib/SPVM/CORE.native/CORE.c
 lib/SPVM/CORE.spvm
 lib/SPVM/Data.pm
 lib/SPVM/Data/Array.pm
+lib/SPVM/Document/ExchangeAPI.pod
 lib/SPVM/Document/Extension.pod
 lib/SPVM/Document/Functions.pod
 lib/SPVM/Document/Language.pod
-lib/SPVM/Document/NativeInterface.pod
-lib/SPVM/Document/PerlAPI.pod
+lib/SPVM/Document/NativeAPI.pod
 lib/SPVM/Double.pm
 lib/SPVM/Double.spvm
 lib/SPVM/Example.native/Example.c
 lib/SPVM/Example.spvm
+lib/SPVM/ExchangeAPI.pm
 lib/SPVM/Float.pm
 lib/SPVM/Float.spvm
 lib/SPVM/Int.pm
@@ -131,7 +132,6 @@ lib/SPVM/List.spvm
 lib/SPVM/Long.pm
 lib/SPVM/Long.spvm
 lib/SPVM/Object.pm
-lib/SPVM/PerlAPI.pm
 lib/SPVM/Short.pm
 lib/SPVM/Short.spvm
 LICENSE.txt
